--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
@@ -1,20 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:cvts="clr-namespace:LagoVista.XPlat.Core.ValueConverter;assembly=LagoVista.XPlat.Core"
              x:Class="LagoVista.XPlat.Sample.App">
     <Application.Resources>
-        <!-- Application resource dictionary -->
         <ResourceDictionary>
-            <cvts:VisibilityConverter x:Key="VisibilityConverter" />
-            <cvts:ColorConverter  x:Key="ColorConverter" />
-            <cvts:DatePrinterConverter x:Key="DatePrinterConverter" />
-            <cvts:NotNullVisibilityConverter x:Key="NotNullVisibilityConverter" />
-            <cvts:NullVisibilityConverter x:Key="NullVisibilityConverter" />
-            <Style TargetType="Label" x:Key="SectionLabel" >
-                <Setter Property="FontAttributes"  Value="Bold" />
-                <Setter Property="Margin" Value="10,10,0,0" />
-            </Style>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Colors.xaml" />
+                <ResourceDictionary Source="Resources/CommonResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
