--- a/src/LagoVista.XPlat.Core/Views/Auth/ResetPasswordView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/ResetPasswordView.xaml
@@ -22,17 +22,19 @@
             <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
             <ScrollView Grid.Column="1" Grid.Row="1">
                 <StackLayout >
-                    <pge:Label Text="{ext:ClientTranslate Common_EmailAddress}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate Common_EmailAddress}" />
                     <pge:Entry Text="{Binding Model.Email, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Common_Email_Watermark}" Keyboard="Email"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ResetPassword_NewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
-                    <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ResetPassword_NewPassword_Watermark}"  IsPassword="True" Keyboard="Plain"  />
+                    <pge:Label Text="{ext:ClientTranslate ResetPassword_NewPassword}" />
+                    <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ResetPassword_NewPassword_Watermark}" 
+                               IsPassword="True" Keyboard="Plain"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ResetPassword_ConfirmNewPassword}" TextColor="{StaticResource NuvIoTBlack}" />
-                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ResetPassword_ConfirmNewPassword_Watermark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,40"  />
+                    <pge:Label Text="{ext:ClientTranslate ResetPassword_ConfirmNewPassword}" />
+                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ResetPassword_ConfirmNewPassword_Watermark}" 
+                               IsPassword="True" Keyboard="Plain" Margin="0,0,0,40"  />
 
                     <pge:Button Command="{Binding ResetPasswordCommand}" Text="{ext:ClientTranslate ResetPassword_Submit}" HeightRequest="48" />
-                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small" Margin="0,15,0,0"  />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" FontSize="Small" Margin="0,15,0,0"  />
                 </StackLayout>
 
             </ScrollView>
