--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Colors.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Colors.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary 
     xmlns="http://xamarin.com/schemas/2014/forms"
+    x:Class="LagoVista.ThemeDark"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" >
   
     <Color x:Key="TitleBarBackground">#333</Color>
