--- a/src/LagoVista.XPlat.Core/Views/Orgs/AcceptInviteView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Orgs/AcceptInviteView.xaml
@@ -22,14 +22,17 @@
             <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
             <ScrollView Grid.Row="1" Grid.Column="1">
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_Accept_Help}" IsVisible="{Binding IsLoggedIn}" />
-                    <pge:Button Command="{Binding AcceptInviteCommnad}" Text="{ext:ClientTranslate AcceptInvite_Accept}" HeightRequest="48" IsVisible="{Binding IsLoggedIn}"/>
+                    <pge:Label Text="{ext:ClientTranslate AcceptInvite_Accept_Help}" IsVisible="{Binding IsLoggedIn}" />
+                    <pge:Button Command="{Binding AcceptInviteCommnad}" Text="{ext:ClientTranslate AcceptInvite_Accept}"
+                                HeightRequest="48" IsVisible="{Binding IsLoggedIn}"/>
 
-                    <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin_Help}" IsVisible="{Binding IsNotLoggedIn}"  />
-                    <pge:Button Command="{Binding AcceptAndLoginCommand}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin}" HeightRequest="48" IsVisible="{Binding IsNotLoggedIn}"/>
+                    <pge:Label Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin_Help}" IsVisible="{Binding IsNotLoggedIn}"  />
+                    <pge:Button Command="{Binding AcceptAndLoginCommand}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndLogin}" 
+                                HeightRequest="48" IsVisible="{Binding IsNotLoggedIn}"/>
 
-                    <Label TextColor="{StaticResource NuvIoTBlack}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndRegister_Help}"  />
-                    <pge:Button Command="{Binding AcceptAndRegisterCommand}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndRegister}" HeightRequest="48" />
+                    <pge:Label Text="{ext:ClientTranslate AcceptInvite_AcceptAndRegister_Help}"  />
+                    <pge:Button Command="{Binding AcceptAndRegisterCommand}" Text="{ext:ClientTranslate AcceptInvite_AcceptAndRegister}" 
+                                HeightRequest="48" />
                 </StackLayout>
             </ScrollView>
         </Grid>
