--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
@@ -5,7 +5,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Colors.xaml" />
+                <ResourceDictionary Source="Resources/Fonts.xaml" />
+                <ResourceDictionary Source="Resources/Theme.Dark.xaml" />
                 <ResourceDictionary Source="Resources/CommonResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
