--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Theme.Light.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Theme.Light.xaml
@@ -1,18 +1,19 @@
 ﻿<ResourceDictionary 
     xmlns="http://xamarin.com/schemas/2014/forms"
-    x:Class="LagoVista.ThemeDark"
+    x:Class="LagoVista.Colors.ThemeLight"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" >
   
     <Color x:Key="TitleBarBackground">#333</Color>
     
     <Color x:Key="TitleBarText">#FFF</Color>
     <Color x:Key="PageBackground">#555</Color>
-    <Color x:Key="PageText" >#CCC</Color>
+    <Color x:Key="PageText"  >#FFF</Color>
     <Color x:Key="PageTextHighlighted">#EEE</Color>
     <Color x:Key="NavIconColor">#00FF00</Color>
     <Color x:Key="InvalidColor">#F00</Color>
     <Color x:Key="DangerColor">#F00</Color>
-    
+    <Color x:Key="LabelText" >#FF0000</Color>
+
     <Color x:Key="EditControlBackground" >#FFFF00</Color>
     <Color x:Key="EditControlText" >#FFFF00</Color>  
     <Color x:Key="EditControlFrame" >#FFFF00</Color>
@@ -41,9 +42,6 @@
     <Color x:Key="TabBarForeground" >#FFFF00</Color>
     <Color x:Key="TabBarBackgroundActive" >#FFFF00</Color>
     <Color x:Key="TabBarForegroundActive" >#FFFF00</Color>
-    <x:String x:Key="TabBarFont">Arial</x:String>
-    <x:Double x:Key="TabBarFontSize">12</x:Double>
-    <x:Double x:Key="TabBarIconFontSize">36</x:Double>
 
     <Color x:Key="HiglightColor" >#FFFF00</Color>
 
@@ -53,23 +51,6 @@
     <Color x:Key="ListItemLabelColor" >#000FFF</Color>
     <Color x:Key="ListItemDetailColor" >#FFFF00</Color>
     <Color x:Key="ListItemIconColor">#000FFF</Color>
-    <x:String x:Key="ListItemFont">Arial</x:String>
-    <x:String x:Key="ListItemDetailFont">Arial</x:String>
-    <x:Double x:Key="ListItemFontSize">36</x:Double>
-    <x:Double x:Key="LiteItemDetailSize">12</x:Double>
 
-    <Color x:Key="LabelText" >#FF0000</Color>
-
-    <x:String x:Key="HeaderFont">Arial</x:String>
-    <x:String x:Key="ContentFont">Arial</x:String>
-    <x:String x:Key="LabelFont">Arial</x:String>
-    <x:String x:Key="EntryFont">Arial</x:String>
-    <x:String x:Key="MenuFont">Arial</x:String>
-   
-    <x:Double x:Key="HeaderFontSize">24</x:Double>
-    <x:Double x:Key="LabelFontSize">12</x:Double>
-    <x:Double x:Key="EntryFontSize">12</x:Double>
-    <x:Double x:Key="PageFontSize">12</x:Double>
-    <x:Double x:Key="MenuFontSize">18</x:Double>
-    <x:Double x:Key="ButtonFontSize">18</x:Double>
+  
 </ResourceDictionary>
