--- a/src/LagoVista.XPlat.Core/Views/Auth/ChangePasswordView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/ChangePasswordView.xaml
@@ -20,17 +20,20 @@
             <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
             <ScrollView Grid.Column="1" Grid.Row="1">
                 <StackLayout Grid.Row="1" Margin="20" WidthRequest="300" HorizontalOptions="Center" >
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_OldPassword}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold" />
-                    <pge:Entry Text="{Binding Model.OldPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_OldPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_OldPassword}" />
+                    <pge:Entry Text="{Binding Model.OldPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_OldPassword_WaterMark}" 
+                               IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_NewPassword}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"  />
-                    <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_NewPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_NewPassword}"  />
+                    <pge:Entry Text="{Binding Model.NewPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_NewPassword_WaterMark}"
+                               IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
-                    <pge:Label Text="{ext:ClientTranslate ChangePassword_ConfirmNewPassword}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"  />
-                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_ConfirmNewPassword_WaterMark}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
+                    <pge:Label Text="{ext:ClientTranslate ChangePassword_ConfirmNewPassword}" />
+                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate ChangePassword_ConfirmNewPassword_WaterMark}" 
+                               IsPassword="True" Keyboard="Plain" Margin="0,0,0,20"  />
 
                     <pge:Button Command="{Binding ChangePasswordCommand}" Text="{ext:ClientTranslate Common_Submit}" HeightRequest="48" />
-                    <pge:HyperLinkLabel NavigateCommand="{Binding LogoutCommand}" Text="{ext:ClientTranslate Common_Logout}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small"   />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding LogoutCommand}" Text="{ext:ClientTranslate Common_Logout}"  />
                 </StackLayout>
             </ScrollView>
         </Grid>
