--- a/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/SendResetPasswordLinkView.xaml
@@ -22,12 +22,12 @@
 
             <ScrollView Grid.Row="1" Grid.Column="1">
                 <StackLayout  >
-                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Help}" TextColor="{StaticResource NuvIoTBlack}" />
+                    <pge:Label Text="{ext:ClientTranslate SendResetPasswordLink_Help}" />
 
-                    <pge:Label Text="{ext:ClientTranslate Common_Password}"  TextColor="{StaticResource NuvIoTBlack}"  FontAttributes="Bold" Margin="0,15,0,0" />
+                    <pge:Label Text="{ext:ClientTranslate Common_Password}"  Margin="0,15,0,0" />
                     <pge:Entry Text="{Binding EmailAddress, Mode=TwoWay}" Placeholder="{ext:ClientTranslate SendResetPasswordLink_Email_Watermark}"  Keyboard="Email" />
                     <pge:Button Command="{Binding SendResetPasswordLinkCommand}" Text="{ext:ClientTranslate SendRestPasswordLink_Send}" HeightRequest="48" />
-                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small" Margin="0,15,0,30"  />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" Margin="0,15,0,30"  />
                 </StackLayout>
             </ScrollView>
         </Grid>
