--- a/src/LagoVista.XPlat.Core/Views/Users/RegisterView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Users/RegisterView.xaml
@@ -21,23 +21,25 @@
             <pge:Image FileName="{Binding AppConfig.AppLogo}" UWPPath="Assets" Grid.Column="1" />
             <ScrollView Grid.Column="1" Grid.Row="1">
                 <StackLayout  >
-                    <pge:Label Text="{ext:ClientTranslate Register_FirstName}"  TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold" />
+                    <pge:Label Text="{ext:ClientTranslate Register_FirstName}" />
                     <pge:Entry Text="{Binding RegisterModel.FirstName, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_FirstName_WaterMark}"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_LastName}"  TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"/>
+                    <pge:Label Text="{ext:ClientTranslate Register_LastName}" />
                     <pge:Entry Text="{Binding RegisterModel.LastName, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_LastName_WaterMark}"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Email}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"/>
+                    <pge:Label Text="{ext:ClientTranslate Register_Email}" />
                     <pge:Entry Text="{Binding RegisterModel.Email, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Email_WaterMark}"  Keyboard="Email"  />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Password}" TextColor="{StaticResource NuvIoTBlack}" FontAttributes="Bold"/>
-                    <pge:Entry Text="{Binding RegisterModel.Password, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Password_Watermark}"  IsPassword="True" Keyboard="Plain" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Password}" />
+                    <pge:Entry Text="{Binding RegisterModel.Password, Mode=TwoWay}"  Placeholder="{ext:ClientTranslate Register_Password_Watermark}" 
+                               IsPassword="True" Keyboard="Plain" />
 
-                    <pge:Label Text="{ext:ClientTranslate Register_Confirm_Password}" TextColor="{StaticResource NuvIoTBlack}"  FontAttributes="Bold"/>
-                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_ConfirmPassword_Watermark}"  IsPassword="True" Keyboard="Plain" Margin="0,0,0,15" />
+                    <pge:Label Text="{ext:ClientTranslate Register_Confirm_Password}" />
+                    <pge:Entry Text="{Binding ConfirmPassword, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Register_ConfirmPassword_Watermark}" 
+                               IsPassword="True" Keyboard="Plain" Margin="0,0,0,15" />
 
                     <pge:Button Command="{Binding RegisterCommand}" Text="{ext:ClientTranslate Register_Title}" HeightRequest="42" WidthRequest="100" />
-                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}" TextColor="{StaticResource NuvIoTDark}" FontSize="Small" Margin="0,15,0,0"  />
+                    <pge:HyperLinkLabel NavigateCommand="{Binding CancelCommand}" Text="{ext:ClientTranslate Common_Cancel}"  Margin="0,15,0,0"  />
                 </StackLayout>
             </ScrollView>
         </Grid>
