wip style updates

--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Theme.Dark.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Theme.Dark.xaml
@@ -5,21 +5,41 @@
     <Color x:Key="TitleBarBackground">#333</Color>
     <Color x:Key="TitleBarText">#CCC</Color>
 
-    <Color x:Key="HiglightColor" >#D48D17</Color>
+    <Color x:Key="HighlightColor" >#D48D17</Color>
 
     <Color x:Key="PageBackground">#555</Color>
     <Color x:Key="PageText"  >#CCC</Color>
     <Color x:Key="PageTextHighlighted">#FFF</Color>
     <Color x:Key="NavIconColor">#AAA</Color>
+    
     <Color x:Key="InvalidColor">#F00</Color>
     <Color x:Key="DangerColor">#F00</Color>
     <Color x:Key="LabelText" >#CCC</Color>
 
-    <Color x:Key="EditControlBackground" >#575757</Color>
+    <Color x:Key="LinkColor">#00FF00</Color>
+    <Color x:Key="LinkActive">#00FFFF</Color>
+    <Color x:Key="LinkDisabled">#00FF00</Color>
+
+    <Color x:Key="EditControlBackground" >#777</Color>
     <Color x:Key="EditControlText" >#EEE</Color>
-    <Color x:Key="EntryPlaceholderColor">#AAA</Color>
+    <Color x:Key="EditPlaceholderColor">#AAA</Color>
     <Color x:Key="EditControlFrame" >#FFFF00</Color>
-    <Color x:Key="EditControlFrameFocus" >#FFFF00</Color>
+
+    <Color x:Key="EditControlBackgroundFocus" >#EEE</Color>
+    <Color x:Key="EditControlTextFocus" >#333</Color>
+    <Color x:Key="EditControlPlaceholderFocus">#888</Color>
+    <Color x:Key="EditControlFrameFocus" >#333</Color>
+
+    <Color x:Key="EditControlFrameDisabled" >#575757</Color>
+    <Color x:Key="EditControlBackgroundDisabled" >#575757</Color>
+    <Color x:Key="EditControlTextDisabled" >#575757</Color>
+    <Color x:Key="EditControlPlaceHolderDisabled" >#575757</Color>
+
+    <Color x:Key="EditControlFrameActive" >#575757</Color>
+    <Color x:Key="EditControlBackgroundActive" >#575757</Color>
+    <Color x:Key="EditControlTextActive" >#575757</Color>
+    <Color x:Key="EditControlPlaceHolderActive" >#575757</Color>
+
     <Color x:Key="EditControlFrameInvalid" >#FFFF00</Color>
 
     <Color x:Key="MenuBarBackground" >#333</Color>
@@ -32,20 +52,24 @@
     <Color x:Key="MenuBarForegroundDisabled" >#FFFF00</Color>
     <Color x:Key="MenuIconColorActive">#FF00FF</Color>
 
-    <Color x:Key="ButtonBackground" >#333</Color>
+    <Color x:Key="ButtonBackgroundDisabled" >#333</Color>
+    <Color x:Key="ButtonForegroundDisabled" >#AAA</Color>
+    <Color x:Key="ButtonBorderDisabled" >#555</Color>
+
+    <Color x:Key="ButtonBackground" >#444</Color>
     <Color x:Key="ButtonForeground" >#AAA</Color>
     <Color x:Key="ButtonBorder" >#555</Color>
 
-    <Color x:Key="ButtonBackgroundActive" >#555</Color>
+    <Color x:Key="ButtonBackgroundActive" >#333</Color>
     <Color x:Key="ButtonForegroundActive" >#CCC</Color>
-    <Color x:Key="ButtonBorderActive" >#777</Color>
+    <Color x:Key="ButtonBorderActive" >#555</Color>
 
     <Color x:Key="TabBarBackground" >#FFFF00</Color>
     <Color x:Key="TabBarForeground" >#FFFF00</Color>
     <Color x:Key="TabBarBackgroundActive" >#FFFF00</Color>
     <Color x:Key="TabBarForegroundActive" >#FFFF00</Color>
 
-    <Color x:Key="RowSeperator" >#FFFF00</Color>
+    <Color x:Key="RowSeperatorColor" >#FFFF00</Color>
 
     <Color x:Key="ListItemBackgroundColor" >#4C4C4C</Color>
     <Color x:Key="ListItemLabelColor" >#CCC</Color>
