--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/App.xaml
@@ -5,53 +5,11 @@
     xmlns:local="using:LagoVista.XPlat.Sample.UWP"
     RequestedTheme="Light">
     <Application.Resources>
-    
-        <ResourceDictionary>
+  <!--      <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-               <!-- <ResourceDictionary Source="Resources/ButtonStyle.xaml" />
-                <ResourceDictionary Source="Resources/EditTextStyle.xaml" />-->
-                
-                <ResourceDictionary >
-                    <SolidColorBrush x:Key="SystemControlHighlightBaseMediumLowBrush" Color="White" />
-                    <SolidColorBrush x:Key="SystemControlHighlightBaseHighBrush" Color="White" />
-                    <SolidColorBrush x:Key="SystemControlHighlightAccentBrush" Color="Pink" />
-                    
-                    
-                    
-                    <!-- List Item BG Colors -->
-                    <!-- https://github.com/xamarin/Xamarin.Forms/blob/0c95d0976cc089fe72476fb037851a64987de83c/Xamarin.Forms.Platform.UAP/Resources.xaml -->
-                    <!-- Mouse Down, Selected BG -->
-                    <SolidColorBrush x:Key="SystemControlHighlightListAccentHighBrush" Color="Green" />
-                    
-                    <!-- Selected BG-->
-                    <SolidColorBrush x:Key="SystemControlHighlightListAccentMediumBrush" Color="Blue" />
-
-                    <!-- Hover Selected BG-->
-                    <SolidColorBrush x:Key="SystemControlHighlightListAccentLowBrush" Color="Red" />
-                    
-                    <!-- Hover BG -->
-                    <SolidColorBrush x:Key="SystemControlHighlightListLowBrush" Color="Tan" />
-                    
-                    <!-- Click BG -->
-                    <SolidColorBrush x:Key="SystemControlHighlightListMediumBrush" Color="Orange" />
-            
-                    <SolidColorBrush x:Key="BackgroundFocusBrush" Color="#CCC" />
-                    <SolidColorBrush x:Key="PlaceholderForegroundFocusBrush" >#666</SolidColorBrush>
-                    <SolidColorBrush x:Key="ForegroundFocusBrush" >#222</SolidColorBrush>
-                    
-
-                    <SolidColorBrush x:Key="SystemAccentColorLight3" Color="Green"/>
-                    <SolidColorBrush x:Key="SystemAccentColorDark2" Color="Red"/>
-
-                    <SolidColorBrush x:Key="ButtonBorderBrushMediumBrush" Color="Red"/>
-                    <SolidColorBrush x:Key="ButtonBackgroundMediumBrush" Color="Orange" />
-                    <SolidColorBrush x:Key="ButtonForegroundMediumBrush" Color="White" />
-
-                    <SolidColorBrush x:Key="ButtonBackground" Color="Transparent"/>
-                    <SolidColorBrush x:Key="ButtonForeground" Color="MediumSlateBlue"/>
-                    <SolidColorBrush x:Key="ButtonBorderBrush" Color="MediumSlateBlue"/>
-                </ResourceDictionary>
+                <ResourceDictionary Source="Resources/EditTextStyle.xaml" />
+                <ResourceDictionary Source="Resources/ButtonStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        </ResourceDictionary>-->
     </Application.Resources>
 </Application>
