--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Fonts.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/Fonts.xaml
@@ -7,8 +7,9 @@
     <x:Double x:Key="TabBarIconFontSize">36</x:Double>
     <x:String x:Key="ListItemFont">Arial</x:String>
     <x:String x:Key="ListItemDetailFont">Arial</x:String>
-    <x:Double x:Key="ListItemFontSize">36</x:Double>
-    <x:Double x:Key="LiteItemDetailSize">12</x:Double>
+    <x:Double x:Key="ListItemFontSize">24</x:Double>
+    <x:Double x:Key="LiteItemDetailSize">14</x:Double>
+    
     <x:String x:Key="HeaderFont">Arial</x:String>
     <x:String x:Key="ContentFont">Arial</x:String>
     <x:String x:Key="LabelFont">Arial</x:String>
@@ -17,7 +18,8 @@
    
     <x:Double x:Key="HeaderFontSize">24</x:Double>
     <x:Double x:Key="LabelFontSize">14</x:Double>
-    <x:Double x:Key="EntryFontSize">14</x:Double>
+    <x:Double x:Key="EntryFontSize">16</x:Double>
+    <x:Double x:Key="ContentFontSize">14</x:Double>
     <x:Double x:Key="PageFontSize">14</x:Double>
     <x:Double x:Key="MenuFontSize">18</x:Double>
     <x:Double x:Key="ButtonFontSize">18</x:Double>
