--- a/src/LagoVista.XPlat.Core/Views/Auth/LoginView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/Auth/LoginView.xaml
@@ -28,10 +28,12 @@
                                Placeholder="{ext:ClientTranslate Common_Email_Watermark}"  Keyboard="Email" />
 
                     <pge:Label Text="{ext:ClientTranslate Common_Password}" />
-                    <pge:Entry Text="{Binding Password, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Common_Email_Password}" IsPassword="True" Keyboard="Plain" Margin="0,0,0,10"  />
+                    <pge:Entry Text="{Binding Password, Mode=TwoWay}" Placeholder="{ext:ClientTranslate Common_Email_Password}" 
+                               IsPassword="True" Keyboard="Plain" Margin="0,0,0,10"  />
 
                     <pge:Button Command="{Binding LoginCommand}" Text="{ext:ClientTranslate Common_Login}" HeightRequest="42" WidthRequest="100" Margin="0,0,0,20" />
-                    <pge:HyperLinkLabel NavigateCommand="{Binding RegisterCommand}" Text="{ext:ClientTranslate Register_Title}" />
+
+                    <pge:HyperLinkLabel NavigateCommand="{Binding RegisterCommand}" Margin="0,0,0,10" Text="{ext:ClientTranslate Register_Title}" />
                     <pge:HyperLinkLabel NavigateCommand="{Binding ForgotPasswordCommand}" Text="{ext:ClientTranslate Login_ForgotPassword}" />
                 </StackLayout>
             </ScrollView>
